@@ -12,7 +12,11 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
-- Backport of PyUnicode_FromString(), _FromStringAndSize(), _Format and
+- Patch #1473257: generator objects gain a gi_code attribute. This is the
+  same object as the func_code attribute of the function that produced the
+  generator.
+
+ Backport of PyUnicode_FromString(), _FromStringAndSize(), _Format and
   _FormatV from Python 3.0. Made PyLong_AsSsize_t and PyLong_FromSsize_t
   public functions.
 
